# tesseract-3.02.02-vc2013

./: README.md
lib/Win32/Debug/: liblept168d.exp  liblept168d.lib  libtesseract302d.exp  libtesseract302d.lib
lib/Win32/Release/: liblept168.exp  liblept168.lib  libtesseract302.exp  libtesseract302.lib
lib/x64/Debug/: liblept168d.exp  liblept168d.lib  libtesseract302d.exp  libtesseract302d.lib
lib/x64/Release/: liblept168.exp  liblept168.lib  libtesseract302.exp  libtesseract302.lib
opencv_contrib-3.0.0/modules/text/: CMakeLists.txt
